--- a/pages/about.html
+++ b/pages/about.html
@@ -13,15 +13,13 @@
     <body>
         <main>
             <div class="content">
-                <nav>
-                    <ul>
-                        <a href="/"><li>обратно</li></a>
-                        
-                    </ul>
-                </nav>
+                <header></header>
             </div>
         </main>
         <footer></footer>
         <div class="bgImg"></div>
+        
     </body>
+    <script type="module" src="../js/components/Navigation.js"></script>
+    <script type="module" src="../js/main.js"></script>
 </html>
