--- a/index.html
+++ b/index.html
@@ -14,22 +14,6 @@
         <main>
             <div class="content">
                 <header>
-                    
-                    <nav id="nav" class="navigation">
-                        <!-- <img id="burger" class="burger" src="icons/burger.svg" width="62" height="62"/> -->
-                        <div id="burger" class="burger"> 
-                            <span class="line line1"></span>
-                            <span class="line line2"></span>
-                            <span class="line line3"></span>
-                        </div>
-                        <div id="navList" class="navList">
-                            <ul>
-                                <a href="/pages/about.html"><li>первое</li></a>
-                                <a><li>второе</li></a>
-                                <a><li>третье</li></a>
-                            </ul>
-                        </div>
-                    </nav>
                 </header>
                 <div class="mainInfo">
                     <p class="title">ШКОЛА №20</p>
@@ -40,6 +24,8 @@
         <footer></footer>
         <div class="bgImg"></div>
 
-        <script src="./js/main.js"></script>
+        
     </body>
+    <script type="module" src="./js/components/Navigation.js"></script>
+    <script type="module" src="./js/main.js"></script>
 </html>
